# iffyuan-ARX-Toolkit

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
arx_toolkit/collect/: __init__.py  collector.py
arx_toolkit/env/: __init__.py  _ros2_io.py  arx_env.py
arx_toolkit/teleop/: __init__.py  leader_follower.py  vr_teleop.py
arx_toolkit/teleop/vr_web_ui/: index.html  interface.js  styles.css  vr_app.js
arx_toolkit/utils/: logger.py  transforms.py
docs/: 0.硬件参数手册.md  1.启动和测试环境.md  2-1.主从遥操作.md  2-2.VR遥操作.md  3.数据采集.md  4.Web键盘控制.md  5.RGB-BGR图像通道修正说明.md  参考代码分析报告.md
ros_scripts/: all.sh
scripts/: collect_data.py  convert_to_lerobot_v3.py  mini_env_example.py  teleop_leader_follower.py  teleop_vr.py  test_vr_direction.py  web_control_demo.py
src/LIFT/: .gitignore  .gitmodules
src/LIFT/ARX_CAN/: arx_can.rules  can.sh
src/LIFT/body/Python/ARX_LIFT_python/: setup.sh  test_lift.py
src/LIFT/body/Python/ARX_LIFT_python/lift_controller/: CMakeLists.txt  __init__.py
src/LIFT/body/Python/ARX_LIFT_python/lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: MotorDlcBase.hpp  Mtp1Dlc.hpp  Mtp2Dlc.hpp  Mtp3Dlc.hpp  Mtp4Dlc.hpp
src/LIFT/body/Python/ARX_LIFT_python/lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/chassis_dlc/: Chassis1Dlc.hpp
src/LIFT/body/Python/ARX_LIFT_python/lift_controller/lib/arx_lift_src/include/arx_lift_src/: lift_head_control_loop.h  util.h
src/LIFT/body/Python/ARX_LIFT_python/lift_controller/src/: lift_control_loop.cpp
src/LIFT/body/ROS/src/ARX_LIFT_ros/arx_lift_controller/: CMakeLists.txt  package.xml
src/LIFT/body/ROS/src/ARX_LIFT_ros/arx_lift_controller/launch/: lift.launch  x7s.launch
src/LIFT/body/ROS/src/ARX_LIFT_ros/arx_lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: LiftMotor.hpp  Mtp3Dlc.hpp  Mtp4Dlc.hpp  RS01.hpp
src/LIFT/body/ROS/src/ARX_LIFT_ros/arx_lift_controller/lib/arx_lift_src/include/arx_lift_src/: lift_head_control_loop.h
src/LIFT/body/ROS/src/ARX_LIFT_ros/arx_lift_controller/src/: lift_controller.cpp
src/LIFT/body/ROS/src/arx_msg_ros/arm_control/: CMakeLists.txt
src/LIFT/body/ROS/src/arx_msg_ros/arm_control/msg/: ArxImu.msg
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/: CMakeLists.txt  package.xml
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/launch/: lift.launch.py  x7s.launch.py
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/: ARXJoy.hpp
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: MotorDlcBase.hpp  Mtp1Dlc.hpp  Mtp2Dlc.hpp
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/canbase/: SocketCan.hpp
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/lib/arx_hardware_interface/include/arx_hardware_interface/chassis_dlc/: Chassis1Dlc.hpp
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/lib/arx_lift_src/include/arx_lift_src/: lift_head_control_loop.h
src/LIFT/body/ROS2/src/ARX_LIFT_ros2/arx_lift_controller/src/: lift_controller.cpp
src/LIFT/realsense/: realsense.sh  save_lrh_frame.py  search.sh
src/LIFT/realsense/src/realsense2_camera/: CMakeLists.txt
src/LIFT/realsense/src/realsense2_camera/launch/: rs_launch.py  rs_multi_camera_launch.py
src/LIFT/realsense/src/realsense2_camera/src/: list_camera_node.cpp
