[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arx-toolkit"
version = "0.1.0"
description = "ARX LIFT2 dual-arm robot toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
]

[tool.setuptools.packages.find]
include = ["arx_toolkit*"]
