[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx-toolkit"
version = "0.1.0"
description = "ARX LIFT2 dual-arm robot toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python",
    "pyyaml",
    "zarr",
    "numcodecs",
]

[project.optional-dependencies]
vr = ["websockets", "scipy"]
lerobot = ["lerobot", "Pillow"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["arx_toolkit*"]
