[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx-toolkit"
version = "0.1.0"
description = "ARX LIFT2 dual-arm robot toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python",
    "pyyaml",
    "zarr>=2.18,<3",
    "numcodecs",
    "scipy",
    "websockets",
]

[project.optional-dependencies]
lerobot = ["lerobot>=0.5.0", "Pillow"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["arx_toolkit*"]
